提高代码健壮性